@@ -137,6 +137,11 @@
 # @param set_environment
 #   Set the environment on the system to the currently running environment
 #
+#   * This will automatically purge the `environment` setting from the `main`
+#     section of the configuration to prevent issues from arising when running
+#     various puppet tools. To prevent this from happening, you may set this to
+#     `no_clean` and the entry will be preserved if present.
+#
 # @author Trevor Vaughan <tvaughan@onyxpoint.com>
 #
 class pupmod (
@@ -170,7 +175,7 @@ class pupmod (
   Boolean                                $firewall             = simplib::lookup('simp_options::firewall', { 'default_value' => false }),
   Hash                                   $pe_classlist         = {},
   String[1]                              $package_ensure       = simplib::lookup('simp_options::package_ensure' , { 'default_value' => 'installed'}),
-  Boolean                                $set_environment      = true,
+  Variant[Boolean, Enum['no_clean']]     $set_environment      = true,
   Boolean                                $mock                 = false
 ) inherits pupmod::params {
   unless ($mock == true) {
@@ -266,11 +271,23 @@ class pupmod (
       }
     }
 
-    if $set_environment and ( ! simplib::in_bolt() ) {
-      pupmod::conf { 'environment':
-        confdir => $confdir,
-        setting => 'environment',
-        value   => $environment
+    if $set_environment {
+      unless ($set_environment == 'no_clean') {
+        pupmod::conf { 'remove environment from main':
+          ensure  => 'absent',
+          section => 'main',
+          confdir => $confdir,
+          setting => 'environment',
+          value   => null
+        }
+      }
+
+      unless simplib::in_bolt() {
+        pupmod::conf { 'environment':
+          confdir => $confdir,
+          setting => 'environment',
+          value   => $environment
+        }
       }
     }
 
